[package]
name = "sniper-core"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
directories = "3.0"

[dependencies]
radix_trie = {version="0.2.0"}
serde-tuple-vec-map={version="1.0.0"}
serde = {version="1.0.115", features=["derive"]}
toml = {version="0.5", features = ["preserve_order"]}
